fixed checkbox preview alignment

--- a/src/scss/components/checkbox.scss
+++ b/src/scss/components/checkbox.scss
@@ -48,6 +48,6 @@ input[type='checkbox'] {
 	  }
 }
 
-.markdown-preview-view .task-list-item-checkbox {
+.markdown-preview-view input[type=checkbox] {
 	top: 2px; //aligns vertically with text
 }
